# astra-assistants-api

./: .dockerignore  .env.bkp  .gitignore  CONTRIBUTING.md  Dockerfile  OPEN_API_SPEC_HASH  README.md  VERSION  codegen.sh  codegen_v2.sh  coverage.md  package.json  pyproject.toml  run.py  source_openapi.yaml  update_spec.sh
.github/workflows/: client_releases.yml  docker.yml  releases.yml  run-e2e-tests.yml  run-tests.yml  server_releases.yml
client/: .env.bkp  .gitignore  README.md  pyproject.toml
client/.github/workflows/: run-tests.yml
client/astra_assistants/: __init__.py  astra_assistants_event_handler.py  astra_assistants_manager.py  async_openai_with_default_key.py  mcp_openai_adapter.py  openai_with_default_key.py  patch.py  utils.py
client/astra_assistants/tools/: astra_data_api.py  async_e2b_code_interpreter.py  e2b_code_interpreter.py  structured_code.py  tool_interface.py
client/astra_assistants/tools/structured_code/: delete.py  indent.py  insert.py  program_cache.py  replace.py  rewrite.py  structured_code.py  util.py  write.py
client/astra_assistants/tools/structured_code/lsp/: constants.py  lsp_session.py  session_manager.py  util.py  workspace_edits.py
client/examples/: chat_completion.py  embedding.py  file_embedding.py  no_openai_key.py  run.py  run_retreival.py
client/tests/: conftest.py  test_embedding.py  test_run_retreival.py
client/tests/astra-assistants/: conftest.py  test_auto_tool_call_v2.py  test_chat_completion.py  test_embedding.py  test_function_calling_v2.py  test_run_retreival_v2.py  test_run_v2.py  test_streaming_run_function_calling_async_v2.py  test_streaming_run_function_calling_v2.py  test_streaming_run_retrieval_async_v2.py  test_streaming_run_retrieval_v2.py  test_streaming_run_v2.py  test_vector_store_bytes.py  vertex.py
client/tests/fixtures/: hudson.txt  same_fake_content.txt
client/tests/fixtures/v2/: fake_content.txt
client/tests/openai-sdk/: conftest.py  test_assistants_v2.py
client/tests/streaming-assistants/: conftest.py  test_auto_tool_call_v1.py  test_function_calling_v1.py  test_run_retreival_v1.py  test_run_v1.py  test_streaming_run_function_calling_v1.py  test_streaming_run_retrieval_v1.py  test_streaming_run_v1.py
client/tests/tools/: conftest.py  test_astra_data_api.py  test_code_interpreter.py  test_cot.py  test_lsp_session.py  test_manager.py  test_structured_code.py
examples/: basic.py  bedrock.py  cohere.py  gemini-pro-ada-002.py  perplexity.py
examples/completion/: bedrock-claude.py  bedrock-llama.py  cohere.py  gemini-pro.py  gpt3-5-turbo.py  gpt4.py  perplexity.py  vertex.py
examples/function-calling/: basic.py  gemini.py
examples/retreival/: basic.py  bedrock.py  perplexity.py
images/: generate.sh  generate_env_file.sh  generate_file_search.sh  generate_function_calling.sh  generate_simple.sh
impl/: astra_vector.py  background.py  main.py  models.py  rate_limiter.py  utils.py
impl/model/: assistant_object.py  assistant_object_tools_inner.py  chat_completion_request_message.py  client_run.py  create_assistant_request.py  create_chat_completion_request.py  create_chat_completion_response_choices_inner.py  create_completion_request.py  create_embedding_request.py  create_run_request.py  embedding.py  list_messages_response.py  list_messages_stream_response.py  list_runs_response.py  message_object.py  message_stream_response_object.py  modify_assistant_request.py  modify_message_request.py  open_ai_file.py  run_object.py  submit_tool_outputs_run_request.py
impl/model_v2/: assistants_api_tool_choice_option.py  create_assistant_request.py  create_message_request.py  create_run_request.py  create_thread_and_run_request.py  message_object.py  message_object_attatchments_inner.py  modify_assistant_request.py  modify_message_request.py  run_object.py  vector_store_object.py
impl/routes/: assistants.py  files.py  health.py  stateless.py  threads.py  utils.py
impl/routes_v2/: assistants_v2.py  threads_v2.py  vector_stores.py
impl/services/: chunks.py  code_chunks.py  file.py  inference_utils.py
node/: README.md  jest.config.js  package-lock.json  package.json
node/src/: index.mjs  patch.mjs
openapi_server/: main.py  security_api.py
openapi_server/apis/: assistants_api.py  assistants_api_base.py  audio_api.py  audio_api_base.py  chat_api_base.py  completions_api_base.py  embeddings_api.py  files_api_base.py  fine_tuning_api.py  fine_tuning_api_base.py  images_api.py  images_api_base.py  models_api.py  moderations_api.py  moderations_api_base.py
openapi_server/models/: assistant_file_object.py  assistant_object.py  assistant_object_tools_inner.py  assistant_stream_event.py  assistant_tools_code.py  assistant_tools_function.py  assistant_tools_retrieval.py  chat_completion_function_call_option.py  chat_completion_functions.py  chat_completion_message_tool_call.py  chat_completion_message_tool_call_chunk.py  chat_completion_message_tool_call_chunk_function.py  chat_completion_message_tool_call_function.py  chat_completion_named_tool_choice.py  chat_completion_named_tool_choice_function.py  chat_completion_request_assistant_message.py  chat_completion_role.py  (+152 more)
openapi_server_v2/: main.py  security_api.py
patches/: 0001-modify-generated-code-for-implementation.patch  0001-modify-yaml-for-streaming.patch
streaming-assistants/: .env.bkp  .gitignore  README.md  pyproject.toml
streaming-assistants/.github/workflows/: run-tests.yml
streaming-assistants/examples/: embedding.py  file_embedding.py  run_retreival.py
streaming-assistants/streaming_assistants/: patch.py
streaming-assistants/test/: patch_test_chat_completion.py  patch_test_embedding.py  patch_test_file_embedding.py  patch_test_run.py  patch_test_run_retreival.py
streaming-assistants/tests/: test_chat_completion.py  test_create_and_stream_run.py  test_file_embedding.py  test_function_calling.py  test_modify_and_delete_messages.py  test_patch_function_calling.py  test_run.py  test_run_retreival.py  test_streaming_function_calling.py  test_streaming_run.py
templates/: endpoint_argument_definition.mustache
(+363 files in other folders)
