[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "astra-assistants-api"
version = "0.1.0"
description = ""
authors = ["phact <estevezsebastian@gmail.com>"]

[[tool.poetry.packages]]
include = "openapi_server"

[tool.poetry.dependencies]
python = "^3.10.12,<3.13"
aiofiles = "23.1.0"
aniso8601 = "7.0.0"
async-exit-stack = "1.0.1"
async-generator = "1.10"
chardet = "4.0.0"
dnspython = "2.1.0"
email-validator = "^2.0"
fastapi = "^0.110.1"
graphene = "2.1.8"
graphql-core = "2.3.2"
graphql-relay = "2.0.1"
idna = "3.7"
itsdangerous = "1.1.0"
markupsafe = "2.1.5"
orjson = "3.9.15"
promise = "2.3"
python-dotenv = "1.0.1"
python-multipart = "^0.0.7"
pyyaml = "^6.0.1"
rx = "1.6.1"
six = "1.16.0"
typing-extensions = "4.12.2"
ujson = "5.4.0"
urllib3 = "2.2.2"
uvicorn = "0.30.1"
uvloop = "^0.19.0"
watchgod = "0.7"
websockets = "^12.0"
numpy = "^2.0.1"
cassandra-driver = "^3.28.0"
loguru = "^0.7.2"
arrow = "^1.3.0"
tenacity = "^8.2.3"
tiktoken = "^0.7.0"
docx2txt = "^0.8"
pypdf2 = "^3.0.1"
python-pptx = "^0.6.23"
litellm = "1.66.0"
boto3 = "^1.29.6"
prometheus-fastapi-instrumentator = "^6.1.0"
google-cloud-aiplatform = "^1.38.0"
google-generativeai = "^0.5.0"
astra-assistants = "^2.0.19"
annotated-types = "^0.7.0"
pydantic-core = "^2.16.3"
pydantic = "^2.7.1"
tree-sitter-languages = "^1.10.2"
httptools = "^0.6.1"
slowapi = "^0.1.9"
async-lru = "^2.0.4"
openai = "^1.20.0"
markitdown = "^0.0.1a3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5.post1"
pytest-timeout = "^2.3.1"


[tool.ruff.lint]
# Allow bare except (`E722`), ignore F-strings without placeholder (`F541`)
ignore = ["E722", "F541"]
# Add isort for linting
extend-select = ["I"]

# Ignore `E402` (import violations) in all `__init__.py` files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
skip = [
    '.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox',
    '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv',
]
skip_gitignore = true
