[tool.poetry]
name = "astra-assistants"
version = "2.0.19"
description = "Astra Assistants API - drop in replacement for OpenAI Assistants, powered by AstraDB"
authors = ["phact <estevezsebastian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
openai = "^1.20.0"
litellm = "^1.36.0"
boto3 = "^1.34.31"
aiohttp = "^3.9.4"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
export = "^0.2.1"
pytest-asyncio = "^0.23.7"

[tool.poetry.group.optional.dependencies]
astrapy = "^1.2.1"
e2b-code-interpreter = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "astra_assistants"

