[tool.poetry]
name = "astra-assistants"
version = "2.4.1"
description = "Astra Assistants API - drop in replacement for OpenAI Assistants, powered by AstraDB"
authors = ["phact <estevezsebastian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
httpx = "^0.27.0"
openai = "^1.20.0"
litellm = "^1.36.0"
boto3 = "^1.34.31"
aiohttp = "^3.9.4"
python-dotenv = "^1.0.1"
tree-sitter-python = "^0.23.0"
lsprotocol = "^2023.0.1"
python-lsp-jsonrpc = "^1.1.2"
ruff = ">=0.6.2,<9.0.0"
tree-sitter = "^0.23.0"
astrapy = { version = "^1.2.1", optional = true }
e2b-code-interpreter = { version = "^1.0.1", optional = true }
e2b = { version = "^1.0.1", optional = true }
mcp = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
export = "^0.2.1"
pytest-asyncio = "^0.23.7"
pytest-timeout = "^2.3.1"

[tool.poetry.extras]
tools = ["e2b-code-interpreter", "e2b", "astrapy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "astra_assistants"

