[tool.poetry]
name = "streaming-assistants"
version = "0.18.5-pre"
description = "Streaming enabled Assistants API"
authors = ["phact <estevezsebastian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.26.0"
openai = "^1.20.0"
litellm = "^1.34.18"
boto3 = "^1.34.31"
google-generativeai = "^0.4.1"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "streaming_assistants"

